palm hanging sign & villagers

--- a/common/src/main/resources/assets/beachparty/lang/en_us.json
+++ b/common/src/main/resources/assets/beachparty/lang/en_us.json
@@ -27,6 +27,7 @@
   "block.beachparty.palm_beam": "Palm Beam",
   "block.beachparty.palm_button": "Palm Button",
   "block.beachparty.palm_door": "Palm Door",
+  "block.beachparty.hanging_sign": "Palm Hanging Sign",
   "block.beachparty.palm_fence": "Palm Fence",
   "block.beachparty.palm_fence_gate": "Palm Fence Gate",
   "block.beachparty.palm_floorboard": "Palm Floorboard",
@@ -93,7 +94,7 @@
   "item.beachparty.sunglasses": "Sunglasses",
   "item.beachparty.swim_wings": "Swim Wings",
   "item.beachparty.trunks": "Swimming Trunks",
-  "itemGroup.beachparty.creative_tab": "Beachparty",
+  "creativetab.beachparty.tab": "Beachparty",
   "subtitles.beachparty.sound.ambient_beach": "Waves",
   "subtitles.beachparty.sound.cabinet_close": "Closeing Cabinet",
   "subtitles.beachparty.sound.cabinet_open": "Opening Cabinet",
