gui and recipe fixes

--- a/common/src/main/resources/assets/beachparty/lang/en_us.json
+++ b/common/src/main/resources/assets/beachparty/lang/en_us.json
@@ -138,5 +138,6 @@
   "item.beachparty.chocolate_icecream": "Chocolate Sundae",
   "rei.beachparty.mini_fridge_category": "Mini Fridge",
   "rei.beachparty.tiki_bar_category": "Tiki Bar",
-  "entity.minecraft.villager.beachparty.beach_guy": "Beachboy"
+  "entity.minecraft.villager.beachparty.beach_guy": "Beachboy",
+  "block.beach.party.palm_hanging_sign": "Palm Hanging Sign"
 }
