--- a/common/src/main/resources/assets/beachparty/lang/it_it.json
+++ b/common/src/main/resources/assets/beachparty/lang/it_it.json
@@ -3,7 +3,7 @@
   "block.beachparty.beach_chair":"Sedia da spiaggia",
   "block.beachparty.beach_grass": "Erba della spiaggia",
   "block.beachparty.beach_towel": "Telo mare",
-  "block.beachparty.cabinet": "Gabinetto di Tiki",
+  "block.beachparty.cabinet": "Mobiletto di Tiki",
   "block.beachparty.chair":"Sedia",
   "block.beachparty.cocoa_cocktail": "Cocktail al cacao",
   "block.beachparty.coconut": "Noce di cocco",
