--- a/common/src/main/resources/assets/beachparty/lang/en_us.json
+++ b/common/src/main/resources/assets/beachparty/lang/en_us.json
@@ -126,11 +126,16 @@
   "item.beachparty.chocolate_milkshake": "Chocolate Milkshake",
   "item.beachparty.sweetberry_icecream": "Sweetberry Sundae",
   "item.beachparty.coconut_icecream": "Coconut Sundae",
-  "item.beachparty.beach_umbrella": "Test Item",
-  "item.beachparty.boat": "Test Item",
   "item.beachparty.chocolate_icecream": "Chocolate Sundae",
   "rei.beachparty.mini_fridge_category": "Mini Fridge",
   "rei.beachparty.tiki_bar_category": "Tiki Bar",
   "entity.minecraft.villager.beachparty.beach_guy": "Beachboy",
-  "block.beach.party.palm_hanging_sign": "Palm Hanging Sign"
+  "block.beachparty.palm_hanging_sign": "Palm Hanging Sign",
+  "item.beachparty.refreshing_drink": "Refreshing Drink",
+  "item.beachparty.floaty": "Floaty Boat",
+  "item.beachparty.floaty_chest_boat": "Floaty Chest Boat",
+  "block.beachparty.beach_parasol": "Beach Parasol"
+
+
+
 }
