--- a/common/src/main/resources/assets/beachparty/lang/de_de.json
+++ b/common/src/main/resources/assets/beachparty/lang/de_de.json
@@ -1,86 +1,93 @@
 {
-  "beachparty.container.cabinet": "Schrank",
+  "beachparty.config.enableBeachSetBonus": "Strand-Rüstungsset-Bonus aktivieren",
+  "beachparty.config.title": "Beachparty",
   "block.beachparty.beach_chair":"Strandstuhl",
-  "block.beachparty.beach_grass": "Strandgras",
+  "block.beachparty.beach_parasol": "Sonnenschirm",
   "block.beachparty.beach_towel": "Strandtuch",
   "block.beachparty.cabinet": "Tiki-Schrank",
   "block.beachparty.chair":"Stuhl",
+  "block.beachparty.seashell_block": "Muschel",
   "block.beachparty.cocoa_cocktail": "Kakao-Cocktail",
   "block.beachparty.coconut": "Kokosnuss",
   "block.beachparty.coconut_block": "Kokosnuss",
   "block.beachparty.coconut_cocktail": "Kokosnuss-Cocktail",
   "block.beachparty.deck_chair": "Liegestuhl",
-  "block.beachparty.dried_wheat_block": "Getrockneter Weizen",
-  "block.beachparty.dried_wheat_slab": "Getrockneter Weizen-Slab",
-  "block.beachparty.dried_wheat_stairs": "Getrocknete Weizen-Treppen",
-  "block.beachparty.dry_bush":"Trockener Busch",
-  "block.beachparty.dry_bush_tall": "Trockener Busch, hoch",
+  "block.beachparty.dried_wheat_block": "Getrockneter Strohballen",
+  "block.beachparty.dried_wheat_slab": "Getrocknete Strohballenstufe",
+  "block.beachparty.dried_wheat_stairs": "Getrocknete Strohballentreppe",
   "block.beachparty.empty_sand_bucket": "Leerer Sandeimer",
   "block.beachparty.empty_sand_bucket_block": "Leerer Sandeimer",
   "block.beachparty.hammock": "Hängematte",
+  "block.beachparty.hanging_sign": "Hängeschild aus Palmenholz",
   "block.beachparty.honey_cocktail": "Honig-Cocktail",
   "block.beachparty.lounge_chair":"Liegestuhl",
   "block.beachparty.melon_cocktail": "Melonen-Cocktail",
   "block.beachparty.message_in_a_bottle": "Flaschenpost",
   "block.beachparty.mini_fridge": "Mini-Kühlschrank",
-  "block.beachparty.notimplemented" : "Dieser Block hat Funktionen, die noch nicht vollständig implementiert sind. Bleib dran!",
-  "block.beachparty.palm_beam": "Palmenbalken",
-  "block.beachparty.palm_button": "Palmenknopf",
-  "block.beachparty.palm_door": "Palmentür",
-  "block.beachparty.hanging_sign": "Hängeschild aus Palme",
-  "block.beachparty.palm_fence": "Palmenzaun",
-  "block.beachparty.palm_fence_gate": "Palmenzauntor",
-  "block.beachparty.palm_floorboard": "Palmen-Fußbodenbrett",
-  "block.beachparty.palm_leaves": "Palmenblätter",
-  "block.beachparty.palm_log": "Palmenstamm",
-  "block.beachparty.palm_planks": "Palmenbretter",
-  "block.beachparty.palm_pressure_plate": "Palmen-Druckplatte",
-  "block.beachparty.palm_sapling": "Palmen-Setzling",
-  "block.beachparty.palm_sign": "Palmenschild",
-  "block.beachparty.palm_slab": "Palmen-Slab",
-  "block.beachparty.palm_stairs": "Palmentreppen",
-  "block.beachparty.palm_tall_torch": "Hohe Palmenfackel",
-  "block.beachparty.palm_torch": "Palmenfackel",
-  "block.beachparty.palm_torch_item": "Palmenfackel-Gegenstand",
-  "block.beachparty.palm_trapdoor": "Palmenfalltür",
-  "block.beachparty.palm_wall_torch": "Palmen-Wandfackel",
-  "block.beachparty.palm_wood": "Palmenholz",
+  "block.beachparty.palm_beam": "Palmenholzbalken",
+  "block.beachparty.palm_button": "Palmenholzknopf",
+  "block.beachparty.palm_door": "Palmenholztür",
+  "block.beachparty.palm_fence": "Palmenholzzaun",
+  "block.beachparty.palm_fence_gate": "Palmenholzzauntor",
+  "block.beachparty.palm_floorboard": "Palmenholz-Fußbodenbrett",
+  "block.beachparty.palm_hanging_sign": "Hängeschild aus Palme",
+  "block.beachparty.palm_leaves": "Palmenholzblätter",
+  "block.beachparty.palm_log": "Palmenholzstamm",
+  "block.beachparty.palm_planks": "Palmenholzbretter",
+  "block.beachparty.palm_pressure_plate": "Palmenholz-Druckplatte",
+  "block.beachparty.palm_sapling": "Palmenholz-Setzling",
+  "block.beachparty.palm_sign": "Palmenholzschild",
+  "block.beachparty.palm_slab": "Palmenholz-Slab",
+  "block.beachparty.palm_stairs": "Palmenholztreppen",
+  "block.beachparty.palm_tall_torch": "Hohe Palmenholzfackel",
+  "block.beachparty.palm_torch": "Palmenholzfackel",
+  "block.beachparty.palm_torch_item": "Palmenholzfackel-Gegenstand",
+  "block.beachparty.palm_trapdoor": "Palmenholzfalltür",
+  "block.beachparty.palm_wall_torch": "Palmenholz-Wandfackel",
+  "block.beachparty.palm_wood": "Palmenholzholz",
   "block.beachparty.pumpkin_cocktail": "Kürbis-Cocktail",
   "block.beachparty.radio": "Radio",
   "block.beachparty.sand_bucket": "Sandeimer",
   "block.beachparty.sand_bucket_block": "Sandeimer",
-  "block.beachparty.sand_dirty": "Sand, verschmutzt",
   "block.beachparty.sand_pile": "Sandhaufen",
-  "block.beachparty.sand_seastars": "Sand, Seesterne",
-  "block.beachparty.sand_slab": "Sand-Slab",
   "block.beachparty.sandcastle": "Sandburg",
   "block.beachparty.sandwaves": "Sandwellen",
-  "block.beachparty.stripped_palm_log":"Geschälter Palmenstamm",
-  "block.beachparty.stripped_palm_wood":"Geschältes Palmenholz",
+  "block.beachparty.stripped_palm_log":"Geschälter Palmenholzstamm",
+  "block.beachparty.stripped_palm_wood":"Geschältes Palmenholzholz",
   "block.beachparty.sweetberries_cocktail": "Süßbeeren-Cocktail",
   "block.beachparty.table": "Tisch",
   "block.beachparty.tiki_bar":"Tiki-Bar",
   "block.beachparty.tiki_chair":"Tiki-Stuhl",
+  "config.beachparty.subCategory.beach": "Strandparty-Rüstungsset",
+  "creativetab.beachparty.tab": "[Let's Do] Beachparty",
   "entity.minecraft.villager.beachparty.barkeeper": "Barkeeper",
   "entity.minecraft.villager.beachparty.beach_boy": "Strandjunge",
+  "entity.minecraft.villager.beachparty.beach_guy": "Strandjunge",
   "gui.beachparty.recipebook.toggleRecipes.refridgable": "Kühlbar",
   "gui.beachparty.recipebook.toggleRecipes.shakeable": "Schüttelbar",
   "item.beachparty.beach_hat": "Strandhut",
   "item.beachparty.bikini": "Bikini",
+  "item.beachparty.chocolate_icecream": "Schokoladen-Sundae",
+  "item.beachparty.chocolate_milkshake": "Schokoladen-Milchshake",
+  "item.beachparty.coconut_icecream": "Kokosnuss-Sundae",
+  "item.beachparty.coconut_milkshake": "Kokosnuss-Milchshake",
   "item.beachparty.coconut_open": "Geöffnete Kokosnuss",
   "item.beachparty.cooked_mussel_meat": "Gekochtes Muschelfleisch",
   "item.beachparty.crocs": "Crocs",
+  "item.beachparty.floaty": "Gummiboot",
+  "item.beachparty.floaty_chest_boat": "Gummiboot mit Kiste",
   "item.beachparty.icecream_cactus": "Kaktus-Eis am Stiel",
   "item.beachparty.icecream_chocolate": "Schokoladeneis",
   "item.beachparty.icecream_coconut": "Kokosnuss-Eis am Stiel",
   "item.beachparty.icecream_melon": "Melonen-Eis am Stiel",
   "item.beachparty.icecream_sweetberries": "Süßbeeren-Eis",
-  "item.beachparty.overgrown_disc": "Überwucherte Scheibe",
-  "item.beachparty.overgrown_disc.desc": "MissLilitu - Über den Regenbogen",
-  "item.beachparty.palm_boat": "Palmenboot",
-  "item.beachparty.palm_chest_boat": "Palmenboot mit Kiste",
+  "item.beachparty.overgrown_disc": "Überwucherte Schallplatte",
+  "item.beachparty.overgrown_disc.desc": "MissLilitu - Over The Rainbow",
+  "item.beachparty.palm_boat": "Palmenholzboot",
+  "item.beachparty.palm_chest_boat": "Palmenholzboot mit Kiste",
   "item.beachparty.pool_noodle": "Poolnudel",
   "item.beachparty.raw_mussel_meat": "Rohes Muschelfleisch",
+  "item.beachparty.refreshing_drink": "Erfrischungsgetränk",
   "item.beachparty.rubber_ring_axolotl": "Axolotl-Schwimmring",
   "item.beachparty.rubber_ring_blue": "Blauer Schwimmring",
   "item.beachparty.rubber_ring_pelican": "Pelikan-Schwimmring",
@@ -88,54 +95,30 @@
   "item.beachparty.rubber_ring_stripped": "Gestreifter Schwimmring",
   "item.beachparty.seashell": "Muschelschale",
   "item.beachparty.sunglasses": "Sonnenbrille",
+  "item.beachparty.sweetberry_icecream": "Süßbeer-Sundae",
+  "item.beachparty.sweetberry_milkshake": "Süßbeer-Milchshake",
   "item.beachparty.swim_wings": "Schwimmflügel",
   "item.beachparty.trunks": "Badehose",
-  "creativetab.beachparty.tab": "Strandparty",
-  "subtitles.beachparty.sound.ambient_beach": "Wellen",
-  "subtitles.beachparty.sound.cabinet_close": "Schrank schließen",
-  "subtitles.beachparty.sound.cabinet_open": "Schrank öffnen",
-  "subtitles.beachparty.sound.radio_beachparty": "Über den Regenbogen",
-  "subtitles.beachparty.sound.radio_click": "Klick",
-  "subtitles.beachparty.sound.radio_hawaii": "Hawaiianische Musik",
-  "subtitles.beachparty.sound.radio_reggea": "Reggae-Musik",
-  "subtitles.beachparty.sound.radio_tropical": "Tropische Musik",
-  "subtitles.beachparty.sound.radio_tune": "Seltsames Radio-Rauschen",
+  "rei.beachparty.mini_fridge_category": "Mini-Kühlschrank",
+  "rei.beachparty.tiki_bar_category": "Tiki-Bar",
+  "subtitles.beachparty.sound.cabinet_close": "Schrank schließt",
+  "subtitles.beachparty.sound.cabinet_open": "Schrank öffnet",
+  "subtitles.beachparty.sound.radio_beachparty": "Over the Rainbow",
+  "subtitles.beachparty.sound.radio_click": "Klick!",
+  "subtitles.beachparty.sound.radio_hawaii": "Hawaiian Music",
+  "subtitles.beachparty.sound.radio_reggea": "Reggae Music",
+  "subtitles.beachparty.sound.radio_tropical": "Tropical Music",
+  "subtitles.beachparty.sound.radio_tune": "Weird Radio Noise",
   "tooltip.beachparty.bucket.canbeplaced": "Shift-Rechtsklick zum Platzieren",
-  "tooltip.beachparty.bucket.use": "Wird verwendet, um Sandburgen zu bauen",
-  "tooltip.beachparty.cactusicecream": "Dieses Kaktus-Eis verleiht dir einen Hauch von Glück, aber freu dich nicht zu sehr - es könnte dich etwas stachelig machen",
-  "tooltip.beachparty.canbeplaced": "Kann platziert werden",
-  "tooltip.beachparty.coconut": "Gegen einen festen Block werfen, um zu öffnen",
   "tooltip.beachparty.dyeable": "Färbbar",
-  "tooltip.beachparty.fridge": "Wird verwendet, um Eis und Eis am Stiel herzustellen",
-  "tooltip.beachparty.icecream": "Niemals schmelzend. Immer kalt und erfrischend. Keine Kosten wurden gescheut",
   "tooltip.beachparty.message": "Rechtsklick zum Öffnen",
-  "tooltip.beachparty.radioswitch": "Mausrad hoch/runter, um Radiostationen zu wechseln",
-  "tooltip.beachparty.radioturnon": "Rechtsklick, um es ein-/auszuschalten",
   "tooltip.beachparty.swimwear_effect" : "Delphin-Schnelligkeit & Wasseratmung",
   "tooltip.beachparty.swimwear_set" : "Strandparty-Set:",
   "tooltip.beachparty.swimwear_seteffect" : "Set-Bonus:",
-  "tooltip.beachparty.swimwearboots" : "Badekleidungsstiefel",
-  "tooltip.beachparty.swimwearbreastplate" : "Badekleidung-Brustpanzer",
-  "tooltip.beachparty.swimwearhelmet" : "Badekleidung-Helm",
-  "tooltip.beachparty.swimwearleggings" : "Badekleidung-Beinlinge",
+  "tooltip.beachparty.swimwearboots" : "Badeschuhe",
+  "tooltip.beachparty.swimwearbreastplate" : "Badeoberteil",
+  "tooltip.beachparty.swimwearhelmet" : "Badehut",
+  "tooltip.beachparty.swimwearleggings" : "Badehose",
   "tooltip.beachparty.swimwearline1": "Beim Tragen:",
-  "tooltip.beachparty.swimwearline2": "+17% Schwimmgeschwindigkeit",
-  "tooltip.beachparty.tiki": "Wird verwendet, um Cocktails und Getränke zu mischen",
-  "item.beachparty.sweetberry_milkshake": "Süßbeer-Milchshake",
-  "item.beachparty.coconut_milkshake": "Kokosnuss-Milchshake",
-  "item.beachparty.chocolate_milkshake": "Schokoladen-Milchshake",
-  "item.beachparty.sweetberry_icecream": "Süßbeer-Sundae",
-  "item.beachparty.coconut_icecream": "Kokosnuss-Sundae",
-  "item.beachparty.chocolate_icecream": "Schokoladen-Sundae",
-  "rei.beachparty.mini_fridge_category": "Mini-Kühlschrank",
-  "rei.beachparty.tiki_bar_category": "Tiki-Bar",
-  "beachparty.config.title": "Strandparty",
-  "beachparty.config.enableBeachSetBonus": "Strand-Rüstungsset-Bonus aktivieren",
-  "config.beachparty.subCategory.beach": "Strandparty-Rüstungsset",
-  "entity.minecraft.villager.beachparty.beach_guy": "Strandjunge",
-  "block.beachparty.palm_hanging_sign": "Hängeschild aus Palme",
-  "item.beachparty.refreshing_drink": "Erfrischungsgetränk",
-  "item.beachparty.floaty": "Schwimmboot",
-  "item.beachparty.floaty_chest_boat": "Schwimmboot mit Kiste",
-  "block.beachparty.beach_parasol": "Strandsonnenschirm"
+  "tooltip.beachparty.swimwearline2": "+Schwimmgeschwindigkeit"
 }
